# Operating-systems

./: .gitignore  README.md
Lab1/: CMakeLists.txt  README.md  build.sh  config.txt  main.cpp
Lab1/daemon/: Daemon.cpp  Daemon.hpp  Parser.cpp  Parser.hpp
Lab2/: CMakeLists.txt  build.sh
Lab2/src/client/: client.cpp  clientHandler.cpp  clientHandler.hpp
Lab2/src/conn/: IConn.hpp  conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp
Lab2/src/host/: host.cpp  hostHandler.cpp  hostHandler.hpp
Lab2/src/utils/: safeQueue.h
